--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,13 +21,8 @@
 @import 'normalize';
 @import 'grid';
 @import 'base';
-@import 'progress';
 @import 'buttons';
 @import 'alerts';
-@import 'topbar';
 @import 'form';
 @import 'card';
-@import 'contributions';
-@import 'login';
-@import 'tables';
-@import 'tabs';
+@import 'jobs_list';
