--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2254,6 +2254,17 @@ span.checkbox {
   height: 100%;
   overflow-y: scroll; }
 
+.js-change-views {
+  position: absolute;
+  right: 18px; }
+
+.jobs-list > h2 {
+  font-size: 18px;
+  line-height: 1.3em;
+  margin-bottom: 18px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d9d9d9; }
+
 .jobs-list .job-entry {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2264,35 +2275,157 @@ span.checkbox {
           border-radius: 3px;
   border: 1px solid #d9d9d9;
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05); }
+          box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05);
+  margin-bottom: 18px; }
   .jobs-list .job-entry .job-title {
     -webkit-box-flex: 1;
     -webkit-flex: 1 150px;
         -ms-flex: 1 150px;
             flex: 1 150px;
     border-right: 1px solid #d9d9d9; }
-  .jobs-list .job-entry .job-tasks {
+    .jobs-list .job-entry .job-title h2 {
+      position: relative;
+      overflow: hidden;
+      text-overflow: ellipsis; }
+      .jobs-list .job-entry .job-title h2 a {
+        color: #4992d0; }
+    .jobs-list .job-entry .job-title .completion-count {
+      position: relative; }
+  .jobs-list .job-entry .cs-job-tasks {
     -webkit-box-flex: 10;
     -webkit-flex: 10;
         -ms-flex: 10;
             flex: 10; }
-    .jobs-list .job-entry .job-tasks .job-task {
+    .jobs-list .job-entry .cs-job-tasks .cs-task {
       float: left;
       padding: 0;
-      min-height: 60px;
       min-width: 10px;
       border-right: 1px solid #d9d9d9; }
-      .jobs-list .job-entry .job-tasks .job-task .job-inner {
-        padding: 10px; }
-      .jobs-list .job-entry .job-tasks .job-task:last-child {
+      .jobs-list .job-entry .cs-job-tasks .cs-task:hover {
+        cursor: pointer; }
+      .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner {
+        padding: 10px;
+        position: relative; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-1 {
+          background: #f0faff; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-2 {
+          background: #f6fff4; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-3 {
+          background: #ffece0; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-4 {
+          background: #e1edff; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-5 {
+          background: #f3e6ff; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-6 {
+          background: #e3ffff; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-7 {
+          background: #ffedec; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .job-inner.task-group-8 {
+          background: #e3ffff; }
+      .jobs-list .job-entry .cs-job-tasks .cs-task:last-child {
         border-right: none; }
-      .jobs-list .job-entry .job-tasks .job-task .status {
+      .jobs-list .job-entry .cs-job-tasks .cs-task .status {
         line-height: 20px;
-        background: #d9d9d9;
-        height: 20px; }
-      .jobs-list .job-entry .job-tasks .job-task .content {
+        height: 20px;
+        display: block;
+        position: relative;
+        padding-left: 10px; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .status .fa-times {
+          position: absolute;
+          right: 10px;
+          top: 3px;
+          cursor: pointer; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .status.completed {
+          background: #008000;
+          color: #f2f2f2; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .status.new {
+          background: #bfbfbf; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .status.active {
+          background: #00b300;
+          color: #f2f2f2; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task .status.skipped {
+          background: #a6a6a6; }
+      .jobs-list .job-entry .cs-job-tasks .cs-task .content {
         display: none; }
-      .jobs-list .job-entry .job-tasks .job-task.active .content {
-        display: block; }
+      .jobs-list .job-entry .cs-job-tasks .cs-task.selected {
+        cursor: auto; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task.selected h2 {
+          line-height: 1.3em;
+          position: relative;
+          top: -2px; }
+        .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content {
+          display: block;
+          font-size: 13px; }
+          .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.dates {
+            position: relative;
+            width: 100%;
+            display: block;
+            padding-top: 12px;
+            font-size: 11px; }
+            .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.dates > span {
+              position: absolute;
+              top: -3px;
+              color: #b2b2b2; }
+            .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.dates .start-date {
+              left: 0; }
+            .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.dates .completion-date {
+              right: 0; }
+          .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.task-details {
+            position: absolute;
+            bottom: 7px;
+            width: 100%;
+            display: block;
+            padding-top: 12px;
+            font-size: 11px; }
+            .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.task-details > span {
+              position: absolute;
+              bottom: 0px;
+              right: 20px;
+              color: #b2b2b2; }
+            .jobs-list .job-entry .cs-job-tasks .cs-task.selected .content.task-details > a {
+              position: absolute;
+              bottom: 0px;
+              left: 0px;
+              color: #4992d0; }
+  .jobs-list .job-entry.view-glance {
+    overflow: hidden; }
+    .jobs-list .job-entry.view-glance .job-title {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      height: 1em; }
+      .jobs-list .job-entry.view-glance .job-title .completion-count {
+        display: none; }
+      .jobs-list .job-entry.view-glance .job-title h2 {
+        line-height: 1.5em;
+        padding-left: 10px;
+        font-size: 13px; }
+    .jobs-list .job-entry.view-glance .job-inner {
+      display: none; }
+  .jobs-list .job-entry.view-normal .completion-count {
+    display: none; }
+  .jobs-list .job-entry.view-normal .job-title {
+    padding-top: 18px;
+    padding-left: 10px; }
+    .jobs-list .job-entry.view-normal .job-title h2 {
+      line-height: 1.3em; }
+  .jobs-list .job-entry.view-normal .job-inner {
+    min-height: 50px;
+    padding-bottom: 7px !important; }
+    .jobs-list .job-entry.view-normal .job-inner .content.dates {
+      display: none !important; }
+    .jobs-list .job-entry.view-normal .job-inner .content.task-details {
+      display: none !important; }
+  .jobs-list .job-entry.view-full .completion-count {
+    color: #7f7f7f;
+    font-size: 13px;
+    font-style: italic; }
+  .jobs-list .job-entry.view-full .job-title {
+    padding-top: 18px;
+    padding-left: 10px; }
+    .jobs-list .job-entry.view-full .job-title h2 {
+      line-height: 1.3em;
+      margin-bottom: 5px; }
+  .jobs-list .job-entry.view-full .job-inner {
+    min-height: 70px; }
 
 /*# sourceMappingURL=styles.css.map */
